* Moved a great deal of code into PGObject framework on CPAN (Chris T)

Changelog for 1.4 Series
Released 2014-09-15

Changelog for 1.4.11
* Fixed account dropdowns on default screen (Nick P)
* Fixed broken comparison with oldvendor (Nick P)
* Fixed workflow for saving reconciliation reports (Nick P)
* Fixed HTML errors in payment details (Nick P)
* Making LaTeX optional on starman (Chris T)

Chris T is Chris Travers
Nick P is Nick Praeter
Changelog for 1.4.10
* Note:  Corrected version numbers in 1.4.10.1, 1.4.10 had 1.4.9 as version
* Malay translation added (Kaiser F, and others)
* Fixed 1292, some template editing scripts linked to wrong mod (Chris T)
* Fixed 1290, payment/receipt screen options never show (Chris T)
* Fixed 1291, cannot change customer/vendor on orders/quotes (Chris T)
* Cleaned up logs a little (Chris T)
* Fixed 1294, cannot change parts description or price on inv. (Chris T)
* Fixed 1298, upgrade does not create ar.setting_sequence (Chris T)
* Fixed 1304.1, removed check printing from invoices (Chris T)
* Fixed join issue for GL drafts showing wrong amt (Chris T)
* Fixed 1304.2, pay to name not used in single payment (Chris T)
* Fixed 1314, download link files attached to ECA and entity broken (Erik H)
* Fixed column names in ECA/entity linked files tables (John L)
* Fixed headers indistinguishable from accounts in CoA for some CSS (Erik H)
* Fixed 404 on invoice link from AR/AP aging reports details view (Erik H)
* Fixed html in fixed assets screens (Erik H)

Chris T is Chris Travers
Kaiser F is Kaiser Farrel
Erik H is Erik Huelsmann
John L is John Locke

Changelog for 1.4.9
* Removed optional dependency on LaTeX from starman preload (Chris T)

Chris T is Chris Travers

Changelog for 1.4.8
* Fixed end-date not a date widget on employee div (Chris T)
* Fixed errors saving person as employee on contacts screen (Chris T)
* Added min empty lines for orders, invoices, and gl (Chris T, 1277)